# Algorithms

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/computeOneInBinaryNumber/: CMakeLists.txt  main.cpp
src/demo/: CMakeLists.txt
src/kalman_filters/: CMakeLists.txt
src/kalman_filters/examples/: ekf_example.cpp  kf_example.cpp  ukf_example.cpp
src/line-fitting/: main.cpp
src/line-fitting-ransac/: main.cpp
src/lineFitting/: CMakeLists.txt  main.cpp
src/lineFittingRansac/: CMakeLists.txt  README.md  main.cpp
src/line_cross_polygon/: CMakeLists.txt  main.cpp
src/macrosCommon/: CMakeLists.txt  main.cpp
src/point_in_polygon/: CMakeLists.txt  main.cpp
src/rotate-transforms/: CMakeLists.txt  main.cpp  utils.hpp
