cmake_minimum_required(VERSION 3.27)

# 进入三方库文件夹
# add_subdirectory()

# 进入执行文件文件夹
# add_subdirectory(computeOneInBinaryNumber)
# add_subdirectory(lineFitting)
# add_subdirectory(lineFittingRansac)
# add_subdirectory(kalman_filters)
add_subdirectory(point_in_polygon)
add_subdirectory(line_cross_polygon)
